--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Configuration de la base de données
 DB_NAME=voting_db
-DB_USER=postgres
+DB_USER=voting_user
 DB_PASSWORD=SecurePassword123!
 
 # Ports d'exposition
