--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,32 @@
 services:
 
+# Définition des réseaux
+networks:
+  frontend-network:
+    driver: bridge
+    name: voting-frontend
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
+          gateway: 172.20.0.1
+  backend-network:
+    driver: bridge
+    name: voting-backend
+    ipam:
+      config:
+        - subnet: 172.21.0.0/16
+          gateway: 172.21.0.1
+
+# Définition des volumes
+volumes:
+  db-data:
+    driver: local
+    internal: true
+    ipam:
+      config:
+        - subnet: 172.22.0.0/24
+    name: voting-db-data
+
   # Cache Redis
   redis:
     image: redis:7-alpine
@@ -93,17 +120,4 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
     restart: unless-stopped
 
-# Définition des réseaux
-networks:
-  frontend-network:
-    driver: bridge
-    name: voting-frontend
-  backend-network:
-    driver: bridge
-    name: voting-backend
 
-# Définition des volumes
-volumes:
-  db-data:
-    driver: local
-    name: voting-db-data
