--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       retries: 3
       start_period: 30s
 
-  # Base de données PostgreSQL
+   # Base de données PostgreSQL
   db:
-    image: postgres:14-alpine
+    image: postgres:15-alpine
     container_name: voting-db
     environment:
       POSTGRES_DB: ${DB_NAME}
@@ -27,10 +27,10 @@ services:
     networks:
       - backend-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
       start_period: 60s
 
   # Service Worker (.NET)
