--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ RESULT_PORT=5001
 
 # Configuration Redis
 REDIS_HOST=redis
-REDIS_PORT=6379
+DB_HOST=db
 
 # Configuration Worker
 WORKER_SLEEP_TIME=5
