--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   # Cache Redis
   redis:
     image: redis:7-alpine
@@ -12,7 +11,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-
 
   # Base de données PostgreSQL
   db:
@@ -27,7 +25,7 @@ services:
     networks:
       - backend-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -35,7 +33,7 @@ services:
 
   # Service Worker (.NET)
   worker:
-    build: 
+    build:
       context: ./worker
       dockerfile: Dockerfile
     container_name: voting-worker
@@ -48,7 +46,7 @@ services:
       - backend-network
     environment:
       REDIS_HOST: redis
-      DB_HOST: ${DB_HOST}
+      DB_HOST: db
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -70,7 +68,7 @@ services:
       - backend-network
     environment:
       REDIS_HOST: redis
-      DB_HOST: ${DB_HOST}
+      DB_HOST: db
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -91,7 +89,7 @@ services:
       - frontend-network
       - backend-network
     environment:
-      DB_HOST: ${DB_HOST}
+      DB_HOST: db
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
