--- a/.env
+++ b/.env
@@ -1,15 +1,12 @@
-# Configuration de la base de données
-DB_NAME=voting_db
-DB_USER=voting_user
-DB_PASSWORD=SecurePassword123!
+# PostgreSQL
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=votingdb
 
-# Ports d'exposition
+# Hosts
+DB_HOST=db
+REDIS_HOST=redis
+
+# Ports exposés
 VOTE_PORT=5000
 RESULT_PORT=5001
-
-# Configuration Redis
-REDIS_HOST=redis
-DB_HOST=db
-
-# Configuration Worker
-WORKER_SLEEP_TIME=5
