--- a/.env
+++ b/.env
@@ -1,12 +1,15 @@
-# PostgreSQL
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=votingdb
+# Configuration de la base de données
+DB_NAME=voting_db
+DB_USER=voting_user
+DB_PASSWORD=SecurePassword123!
 
-# Hosts
-DB_HOST=db
-REDIS_HOST=redis
-
-# Ports exposés
+# Ports d'exposition
 VOTE_PORT=5000
 RESULT_PORT=5001
+
+# Configuration Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# Configuration Worker
+WORKER_SLEEP_TIME=5
