--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,11 @@ services:
     networks:
       - backend-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 80s
 
   # Service Worker (.NET)
   worker:
