--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Configuration de la base de données
 DB_NAME=voting_db
-DB_USER=voting_user
-DB_PASSWORD=SecurePassword123!
+DB_USER=postgres
+DB_PASSWORD=postgres
 
 # Ports d'exposition
 VOTE_PORT=5000
