--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   # Cache Redis
   redis:
     image: redis:7-alpine
+    command: redis-server --save "" --appendonly no
     container_name: voting-redis
     networks:
       - backend-network
